# my-agent

./: .gitignore  LICENSE  README.md  application.example.toml  main.py  pyproject.toml  摘要.md
accounting-frontend/: index.html  package-lock.json  package.json
accounting-frontend/src/: App.vue  main.ts
app/: __init__.py  config.py
app/agent/: __init__.py  accounting_agent.py  react_agent.py
app/api/: __init__.py  accounting_routes.py  routes.py
app/application/: __init__.py
app/db/: __init__.py  accounting_db.py  chroma_client.py  milvus_client.py  sqlite_client.py
app/domain/: __init__.py
app/llm/: __init__.py  (+1 more)
docs/: agent-implementation-guide.md  agent-prompt-optimization.md  database-path-guidelines.md  ddd-architecture.md  development-standards.md  hybrid-search-bug-analysis.md  hybrid-search-fix-summary.md  rag-architecture.md  react-agent-optimization.md  refactoring-summary.md  retrieval-test-report.md  whoosh-rebuild-report.md
rag-frontend/: README.md  package-lock.json  package.json
static/: index.html
tests/: check_data.py  debug_chroma.py  minimal_test.py  rebuild_whoosh_index.py  test_accounting.py  test_agentic_rag_no_output.py  test_agno_agent.py  test_check_actual_bug.py  test_demo.py  test_document_repo_fix.py  test_document_repository.py  test_helloworld.py  test_hybrid_search_fix.py  test_rag.py  test_rag_domain.py  test_rag_no_output.py  test_rag_processors.py  test_rag_service.py  test_rag_tools_fix.py  test_retrieval_recall.py  test_text_document_api.py  test_vector_recall_only.py  verify_document_flow.py  verify_rag_fix.md
(+158 files in other folders)
