[project]
name = "my-agent"
version = "0.1.0"
description = "A scalable ReAct Agent framework based on LangGraph + FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # LangChain 核心
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM：阿里百炼（OpenAI 兼容协议）
    "langchain-openai>=0.2.0",
    # Embedding：Ollama 本地
    "langchain-ollama>=0.2.0",
    # 向量数据库
    "langchain-milvus>=0.1.0",
    "pymilvus>=2.4.0",
    # 关系型数据库
    "sqlalchemy>=2.0.0",
    # 配置文件解析（tomllib Python 3.11+ 内置，此为兼容包）
    "tomli>=2.0.0",
    # 其他工具
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Excel 导出
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
